Images now get Croped and stored Individually Based on the trainning count Set By the system

--- a/Documents/NetBeansProjects/Trainner/nbproject/project.properties
+++ b/Documents/NetBeansProjects/Trainner/nbproject/project.properties
@@ -29,27 +29,25 @@ dist.jar=${dist.dir}/Trainner.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.controlsfx-8.0.6_20.jar=..\\..\\..\\Downloads\\Compressed\\opencv\\build\\x86\\vc10\\bin\\controlsfx-8.0.6_20.jar
+file.reference.controlsfx-8.0.6_20.jar=..\\..\\..\\Downloads\\controlsfx-8.0.6_20.jar
 file.reference.controlsfx-samples-8.0.6.jar=Dependencies\\controlsfx-samples-8.0.6.jar
 file.reference.DateChooser.jar=Dependencies\\DateChooser.jar
 file.reference.fxsampler-1.0.6.jar=Dependencies\\fxsampler-1.0.6.jar
 file.reference.jetbrains-annotations.jar=Dependencies\\jetbrains-annotations.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=..\\..\\..\\Downloads\\Compressed\\opencv\\build\\x86\\vc10\\bin\\mysql-connector-java-5.1.23-bin.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar-1=..\\..\\CEF502\\JEE CRUD Library\\mysql-connector-java-5.1.23-bin.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=..\\..\\CEF502\\JEE CRUD Library\\mysql-connector-java-5.1.23-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.OpenCV2.4.1.classpath}:\
     ${file.reference.DateChooser.jar}:\
     ${file.reference.controlsfx-samples-8.0.6.jar}:\
     ${file.reference.fxsampler-1.0.6.jar}:\
     ${file.reference.jetbrains-annotations.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${libs.OpenCV2.4.1.classpath}:\
     ${file.reference.controlsfx-8.0.6_20.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
