Modiifed the screen to feed in in the reigh anchorane

--- a/Documents/NetBeansProjects/FacialSystem/nbproject/project.properties
+++ b/Documents/NetBeansProjects/FacialSystem/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.controlsfx-8.0.6.jar=../Trainner/Dependencies/controlsfx-8.0.6.ja
 file.reference.controlsfx-samples-8.0.6.jar=../Trainner/Dependencies/controlsfx-samples-8.0.6.jar
 file.reference.DateChooser.jar=../Trainner/Dependencies/DateChooser.jar
 file.reference.fxsampler-1.0.6.jar=../Trainner/Dependencies/fxsampler-1.0.6.jar
+file.reference.Jama-1.0.2.jar=..\\..\\Jama-1.0.2.jar
 file.reference.jetbrains-annotations.jar=../Trainner/Dependencies/jetbrains-annotations.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=../../CEF502/JEE CRUD Library/mysql-connector-java-5.1.23-bin.jar
 includes=**
@@ -48,7 +49,8 @@ javac.classpath=\
     ${file.reference.fxsampler-1.0.6.jar}:\
     ${file.reference.jetbrains-annotations.jar}:\
     ${libs.OpenCV2.4.1.classpath}:\
-    ${libs.opencv2.4.1.classpath}
+    ${libs.opencv2.4.1.classpath}:\
+    ${file.reference.Jama-1.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -128,7 +130,7 @@ run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Djava.library.path=C:\\opencv\\build\\java\\x86,-Xlint:unchecked
+run.jvmargs=-Djava.library.path=C:\\opencv\\build\\java\\x86
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
