Modified Attendance List

--- a/Documents/NetBeansProjects/FacialSystem/nbproject/project.properties
+++ b/Documents/NetBeansProjects/FacialSystem/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/FacialSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.controlsfx-8.0.6.jar=../Trainner/Dependencies/controlsfx-8.0.6.jar
+file.reference.controlsfx-8.0.6_20.jar=..\\..\\..\\Downloads\\controlsfx-8.0.6_20.jar
 file.reference.controlsfx-samples-8.0.6.jar=../Trainner/Dependencies/controlsfx-samples-8.0.6.jar
 file.reference.DateChooser.jar=../Trainner/Dependencies/DateChooser.jar
 file.reference.fxsampler-1.0.6.jar=../Trainner/Dependencies/fxsampler-1.0.6.jar
@@ -44,12 +44,12 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.DateChooser.jar}:\
-    ${file.reference.controlsfx-8.0.6.jar}:\
     ${file.reference.controlsfx-samples-8.0.6.jar}:\
     ${file.reference.fxsampler-1.0.6.jar}:\
     ${file.reference.jetbrains-annotations.jar}:\
     ${libs.OpenCV2.4.1.classpath}:\
-    ${file.reference.Jama-1.0.2.jar}
+    ${file.reference.Jama-1.0.2.jar}:\
+    ${file.reference.controlsfx-8.0.6_20.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-XDignore.symbol.file
 javac.deprecation=false
